Update pom.xml to match new data